--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,6 @@ p {
 .portfolio__text,
 .footer__text,
 .media__text,
-.subscribe__label,
 .modal__text {
   /* font-weight: 400; */
   font-size: 16px;
@@ -460,16 +459,28 @@ p {
   margin-right: 80px;
 }
 
+/* --------------subscribe----------- */
+
+.subscribe__text {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+
 .subscribe__form {
   display: flex;
   gap: 24px;
-  align-items: flex-end;
+  /* align-items: flex-end;
   width: 100%;
-  max-width: 453px;
+  max-width: 453px; */
 }
+
 .subscribe__label {
-  font-weight: 500;
-  color: #fff;
+  /* font-weight: 500; */
+  /* color: #fff; */
   /* max-width: 100%; */
   display: flex;
   flex-direction: column;
@@ -477,13 +488,13 @@ p {
   gap: 16px;
 }
 .subscribe__input {
-  width: 100%;
+  width: 264px;
   height: 40px;
   border: 1px solid #fff;
   border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: transparent;
-  padding: 8px 16px;
+  padding-left: 16px;
   color: #fff;
   outline: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -526,12 +537,13 @@ p {
   color: #fff;
   cursor: pointer;
   border: none;
-  gap: 16px;
+  /* gap: 16px; */
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .subscribe__icon {
   fill: #fff;
+  margin-left: 16px;
 }
 
 .subscribe__button:hover,
@@ -556,7 +568,7 @@ p {
   align-items: center;
   opacity: 0;
   pointer-events: none;
-  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -703,6 +715,10 @@ p {
   border-radius: 4px;
   width: 100%;
   height: 120px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
   background-color: transparent;
   padding: 8px 16px;
   outline: transparent;
@@ -717,10 +733,7 @@ p {
 }
 
 .modal__contact-comment::placeholder {
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.04em;
-  color: rgba(46, 47, 66, 0.4);
+  
   /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
@@ -736,9 +749,9 @@ p {
 }
 
 .checkbox {
-  display: flex;
-  align-items: center;
-  gap: 8px;
+  /* display: flex;
+  align-items: center; */
+  /* gap: 8px; */
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -754,10 +767,10 @@ p {
   border: 1px solid #404bbf;
 }
 
-.checkbox__input:checked + .checkbox__custom {
+.checkbox__input:checked + .checkbox > .checkbox__custom{
   background-color: #404bbf;
   border: none;
-  fill: #F4F4FD;
+  fill: #f4f4fd;
 }
 
 /* .checkbox__input:checked + .checkbox__custom .checkbox__icon {
@@ -800,6 +813,7 @@ p {
 /* -------------send button--------- */
 
 .send__button {
+  display: block;
   margin: 0 auto;
   border-radius: 4px;
   min-width: 169px;
