--- a/css/styles.css
+++ b/css/styles.css
@@ -490,6 +490,9 @@ p {
 .subscribe__input {
   width: 264px;
   height: 40px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
   border: 1px solid #fff;
   border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
@@ -501,10 +504,6 @@ p {
 }
 
 .subscribe__input::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
   color: #fff;
   /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
@@ -700,7 +699,7 @@ p {
   border-color: #4d5ae5;
 }
 
-.modal__contact-label:focus-within .modal__icon {
+.modal__contact-input:focus + .modal__icon {
   fill: #4d5ae5;
 }
 
@@ -716,9 +715,9 @@ p {
   width: 100%;
   height: 120px;
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
-  color: #2e2f42;
+  color: rgba(46, 47, 66, 0.4);
   background-color: transparent;
   padding: 8px 16px;
   outline: transparent;
